--- a/style.css
+++ b/style.css
@@ -4,3 +4,60 @@
     padding: 0;
 }
 
+body > header{
+    background-color: darkgray;
+    padding: 16px 0;
+}
+
+header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+header li{
+    display: inline;
+}
+
+header li a{
+    color: black;
+}
+
+.container {
+    width: 1366;
+    margin: 0 auto;
+}
+
+section .articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.articles article img {
+    height: 180px;
+}
+
+.articles article {
+    width: 30%;
+    margin-bottom: 16px;
+}
+section {
+    padding: 16px 0;
+}
+
+section h2 {
+    margin-bottom: 16px;
+}
+
+.articles article h3 {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.articles article a {
+    background-color: aqua;
+    color: black;
+    padding: 8px;
+    display: inline-block;
+}
