ajustes de layout e criaçao de duas novas sessões

--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@
 }
 
 body > header{
-    background-color: darkgray;
+    background-color: rgb(44, 44, 44);
     padding: 16px 0;
+    color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header h1 {
+    font-size: 40px;
 }
 
 header .container {
@@ -17,15 +23,24 @@ header .container {
 
 header li{
     display: inline;
+    margin-left: 16px;
 }
 
 header li a{
-    color: black;
+    color: aliceblue;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
+header li a:hover {
+    text-decoration: underline;
 }
 
 .container {
-    width: 1366;
+    width: 1366px;
     margin: 0 auto;
+    padding: 16px 16px;
 }
 
 section .articles {
@@ -35,24 +50,28 @@ section .articles {
 }
 
 .articles article img {
-    height: 180px;
+    /*height: 180px;*/
+    width: 100%;
 }
 
 .articles article {
     width: 30%;
     margin-bottom: 16px;
 }
+
 section {
     padding: 16px 0;
 }
 
 section h2 {
     margin-bottom: 16px;
+    font-size: 32px;
 }
 
 .articles article h3 {
     margin-top: 8px;
     margin-bottom: 8px;
+    font-size: 20px;
 }
 
 .articles article a {
@@ -60,4 +79,33 @@ section h2 {
     color: black;
     padding: 8px;
     display: inline-block;
+    font-family: sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 8px;
+}
+
+.articles article a:hover{
+    text-decoration: underline;
+}
+
+.articles article p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#sport {
+    background-color: rgba(0, 255, 0, 0.2);
+}
+
+#sport .articles article a {
+    background-color: green;
+    color: aliceblue;
+}
+
+#economy {
+    background-color: rgb(255, 254, 199);
+}
+
+#economy .articles article a {
+    background-color: orange;
 }
