alteração de cor na aba games

--- a/style.css
+++ b/style.css
@@ -109,3 +109,12 @@ section h2 {
 #economy .articles article a {
     background-color: orange;
 }
+
+#games {
+    background-color: rgb(242, 215, 255);
+}
+
+#games .articles article a{
+    background-color: blueviolet;
+    color: aliceblue;
+}
