mudança na cor de fundo da aba tecnologia

--- a/style.css
+++ b/style.css
@@ -118,3 +118,7 @@ section h2 {
     background-color: blueviolet;
     color: aliceblue;
 }
+
+#tecnology {
+    background-color: rgba(37, 210, 253, 0.185);
+}
